// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonExternal /> renders \`fill\` correctly 1`] = `
.emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  word-break: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.15s linear;
  transition: all 0.15s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-shadow: inset 0 0 0 0.0625rem rgb(216,234,204);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: rgb(216,234,204);
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.emotion-0:visited:hover,
.emotion-0:hover,
.emotion-0:focus {
  color: inherit;
}

.emotion-0:visited {
  color: inherit;
}

.emotion-0:hover,
.emotion-0:focus {
  color: rgb(64,59,59);
  box-shadow: inset 0 0 0 0.0625rem rgba(36,28,21,0.4);
  background-color: transparent;
}

<a
  class="emotion-0 emotion-1"
  href="http://google.com"
  rel="noopener noreferrer"
  target="_blank"
>
  ButtonExternal
</a>
`;

exports[`<ButtonExternal /> renders correctly 1`] = `
.emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  word-break: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.15s linear;
  transition: all 0.15s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-shadow: inset 0 0 0 0.0625rem rgba(36,28,21,0.4);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.emotion-0:visited:hover,
.emotion-0:hover,
.emotion-0:focus {
  color: inherit;
}

.emotion-0:visited {
  color: inherit;
}

.emotion-0:hover,
.emotion-0:focus {
  color: rgb(64,59,59);
  box-shadow: inset 0 0 0 0.0625rem rgb(216,234,204);
  background-color: rgb(216,234,204);
}

<a
  class="emotion-0 emotion-1"
  href="http://google.com"
  rel="noopener noreferrer"
  target="_blank"
>
  ButtonExternal
</a>
`;

exports[`<ButtonExternal /> should allow \`data-testId\` prop to be passed to element 1`] = `
.emotion-0 {
  font-family: Graphik,"Helvetica Neue",Helvetica,Arial,Verdana,sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  color: rgb(36,28,21);
  margin: 0;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  margin-right: 0.5rem;
  margin-bottom: 0.5rem;
  word-break: break-word;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.15s linear;
  transition: all 0.15s linear;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-shadow: inset 0 0 0 0.0625rem rgba(36,28,21,0.4);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: transparent;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
}

.emotion-0:visited:hover,
.emotion-0:hover,
.emotion-0:focus {
  color: inherit;
}

.emotion-0:visited {
  color: inherit;
}

.emotion-0:hover,
.emotion-0:focus {
  color: rgb(64,59,59);
  box-shadow: inset 0 0 0 0.0625rem rgb(216,234,204);
  background-color: rgb(216,234,204);
}

<a
  class="emotion-0 emotion-1"
  data-testid="button-test"
  href="http://google.com"
  rel="noopener noreferrer"
  target="_blank"
>
  ButtonExternal
</a>
`;
